--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <!---- NAV BEGIN ---->
+      <!--- NAV BEGIN --->
       <nav class="nav row__forall">
         <div class="container">
           <div class="nav__row" id="header">
