--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
             <div class="about__body">
               <div class="about__photo">
-                <img class="about__ava" src="/img/ava_m.jpg" alt="photo" />
+                <img class="about__ava" src="./img/ava_m.jpg" alt="photo" />
               </div>
               <div class="about__text">
                 <p>
@@ -213,7 +213,7 @@
           <div class="footer__row">
             <div class="footer__body">
               <div class="footer__logo">
-                <a class="" href="#head"><img class="footer__logo-img" src="/img/logo_svg_white.svg" alt="" src="" /></a>
+                <a class="" href="#head"><img class="footer__logo-img" src="./img/logo_svg_white.svg" alt="" src="" /></a>
               </div>
             </div>
             <div class="footer__copyright">Created by BlackCat © 2020</div>
