--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
           <div class="nav__row" id="header">
             <div class="nav__logo">
-              <a href="#head"> <img class="nav__logo-img" src="img/logo_svg.svg" alt="" /></a>
+              <a href="#head"> <img class="nav__logo-img" src="./img/logo_svg.svg" alt="" /></a>
             </div>
             <!-- <div class="nav__menu"> -->
             <input class="nav-toggle" type="checkbox" id="nav-toggle" />
@@ -31,7 +31,7 @@
                 <li><a href="#about">О НАС</a></li>
                 <li><a href="#contact">КОНТАКТЫ</a></li>
                 <li>
-                  <a href="#"><img class="nav__cart-img" src="img/cart.svg" /></a>
+                  <a href="#"><img class="nav__cart-img" src="./img/cart.svg" /></a>
                 </li>
               </ul>
               <ul class="nav__social-ul">
@@ -44,7 +44,7 @@
               </ul>
             </div>
             <div class="nav__cart-out">
-              <a href="#"><img class="nav__cart-img" src="img/cart.svg" /></a>
+              <a href="#"><img class="nav__cart-img" src="./img/cart.svg" /></a>
             </div>
             <!-- </div> -->
           </div>
@@ -64,7 +64,7 @@
             </div>
             <div class="header__right">
               <div class="header__image">
-                <img class="header__img" src="img/header_img_01m2.png" />
+                <img class="header__img" src="./img/header_img_01m2.png" />
               </div>
             </div>
           </div>
@@ -85,7 +85,7 @@
               <!-- COLUMS BEGIN -->
               <div class="main__column column__001">
                 <div class="column__img">
-                  <a href="#"><img class="column__image" src="/img/Krema_01m.png" alt="" /></a>
+                  <a href="#"><img class="column__image" src="./img/Krema_01m.png" alt="" /></a>
                 </div>
                 <div class="column__title">BOX <span>mini</span></div>
                 <div class="column__cost colum__cost-001">$15</div>
@@ -104,7 +104,7 @@
               </div>
               <div class="main__column column__002">
                 <div class="column__img">
-                  <a href="#"><img class="column__image" src="/img/Korzina_01m.png" alt="" /></a>
+                  <a href="#"><img class="column__image" src="./img/Korzina_01m.png" alt="" /></a>
                 </div>
                 <div class="column__title">BOX <span>middle</span></div>
                 <div class="column__cost colum__cost-002">$25</div>
@@ -123,7 +123,7 @@
               </div>
               <div class="main__column column__003">
                 <div class="column__img">
-                  <a href="#"><img class="column__image" src="/img/Flakoni_01m2.png" alt="" /></a>
+                  <a href="#"><img class="column__image" src="./img/Flakoni_01m2.png" alt="" /></a>
                 </div>
                 <div class="column__title">BOX <span>maxi</span></div>
                 <div class="column__cost colum__cost-003">$35</div>
