--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               </div>
               <div class="about__text">
                 <p>
-                  Nullam ac sem nec felis pretium lobortis. Curabitur condimentum malesuada leo, a vehicula quam porta eu. Etiam molestie elementum felis nec suscipit.
+                  14 Nullam ac sem nec felis pretium lobortis. Curabitur condimentum malesuada leo, a vehicula quam porta eu. Etiam molestie elementum felis nec suscipit.
                 </p>
               </div>
               <div class="about__name"><p>Kristine Kryzhanivska</p></div>
