--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
             <div class="nav__logo">
               <a href="#head"><img class="nav__logo-img" src="./img/logo_svg.svg" alt="" /></a>
             </div>
-
+            <!-- <div class="nav__burger"> -->
             <input class="nav-toggle" type="checkbox" id="nav-toggle" />
             <div class="hamburger"><div></div></div>
+
+            <!-- </div> -->
+
             <!-- <label class="nav-toggle-lable" for="nav-toggle">
               <i class="fas fa-bars"></i>
 
