--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
         </div>
       </footer>
     </div>
+    <script src="./js/menu_scr.js"></script>
     <!-- <script src="https://kit.fontawesome.com/721289eb8c.js" crossorigin="anonymous"></script> -->
   </body>
 </html>
